# GrainMaker

./: .gitignore  .gitmodules  ArtieTune.code-workspace  CLAUDE.md  CMakeLists.txt  GrainShifter.code-workspace  README.md  TODO.md  addClass.py  addFunction.py  gen_sine_wave.py  regenSource.py
CMAKE/: SOURCES.cmake  SourceFiles.cmake  TESTS.cmake  TestFiles.cmake
DIAGRAMS/: .$GranulatorDiagram.drawio.bkp  GrainShiftDiagram.drawio  GranulatorDiagram.drawio
NOTES/: Journal.md  SATB_Vocal_Ranges.csv
SCRIPTS/: README.txt  build_app.py  build_app.sh  build_complete.py  build_tests.py  build_tests.sh  build_vst3.py  build_vst3.sh  rebuild_all.py  rebuild_all.sh  update_version.py
SOURCE/: Grain.cpp  Grain.h  Granulator.cpp  Granulator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SOURCE/DSP_TOOLS/: AirBandEq.h  BiquadFilter.h  BufferFiller.h  ChannelEQ.h  Compressor.h  CrestFinder.h  Crossover.h  Ensemble.h  FETComp.h  FIRFilter.h  FancyComp.cpp  FancyComp.h  FixedDelay.h  Follower.h  FracDelay.h  LevelMeter.h  LpfHpfEq.h  ModeledFilter.h  MultiMeter.h  MultiStageIIR.h  NoiseGate.h  NoiseSource.h  OnePoleLPF.h  QuadLFO.h  SinCosOsc.h  SmoothedCoeff.h  SpectralTiltEQ.h  ThreeBandEq.h  TubeProc.cpp  TubeProc.h  TubeTone.h  UnvoicedDetector.h  VocodeCore.cpp  VocodeCore.h  Waveshaper.h  WeightingFilter.h  Window.cpp  Window.h  Zerox.h
SOURCE/GRAIN/: AnalysisMarker.cpp  AnalysisMarker.h  Grain.cpp  Grain.h  GrainBuffer.h  GrainShifter.cpp  GrainShifter.h  Granulator.cpp  Granulator.h
SOURCE/PITCH/: GrainBuffer.cpp  GrainCorrector.cpp  GrainCorrector.h  GrainShifter.cpp  GrainShifter.h  PitchCorrector.h  PitchDetector.cpp  PitchDetector.h  PitchDetector_backup.cpp  PitchDetector_backup.h  PitchMarkedCircularBuffer.cpp  PitchMarkedCircularBuffer.h
SOURCE/Util/: Juce_Header.h  Version.h
TESTS/: test_BufferFiller.cpp  test_CircularBuffer.cpp  test_Grain.cpp  test_GrainBuffer.cpp  test_GrainCorrector.cpp  test_GrainShifter.cpp  test_Granulator.cpp  test_PitchDetector.cpp  test_PitchMarkedCircularBuffer.cpp  test_PluginBasics.cpp  test_PluginProcessor.cpp  test_ProcessAudioFile.cpp  test_Windowing.cpp
TESTS/TEST_UTILS/: GrainShifterTester.h  TestDefaults.h
